# gmetronome

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
data/: .gitignore  Makefile.am  gmetronome.gresource.xml  org.gmetronome.gschema.xml  org.gmetronome.gschema.xml.in  org.gnome.dqpb.GMetronome.desktop.in  org.gnome.dqpb.GMetronome.gschema.xml.in  org.gnome.dqpb.GMetronome.metainfo.xml.in  org.gnome.dqpb.GMetronome.metainfo.xml.in.in  org.gnome.gitlab.dqpb.GMetronome.desktop.in.in  org.gnome.gitlab.dqpb.GMetronome.gschema.xml.in  org.gnome.gitlab.dqpb.GMetronome.metainfo.xml.in.in
data/ui/: MainWindow.glade  SettingsDialog.glade  ShortcutDialog.glade
flatpak/: org.gnome.dqpb.GMetronome.yml  org.gnome.gitlab.dqpb.GMetronome.yml
m4/: .gitignore  ax_cxx_compile_stdcxx.m4
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  de.po  gmetronome.pot  pt_BR.po
src/: .gitignore  About.cpp  About.h  AccentButton.cpp  AccentButton.h  AccentButtonGrid.cpp  AccentButtonGrid.h  Action.cpp  Action.h  ActionBinding.cpp  ActionBinding.h  Alsa.cpp  Alsa.h  Application.cpp  Application.h  Audio.cpp  Audio.h  AudioBackend.cpp  AudioBackend.h  AudioBackendDummy.cpp  AudioBackendDummy.h  AudioBuffer.cpp  AudioBuffer.h  AudioSource.h  Auxiliary.cpp  Auxiliary.h  Error.cpp  Error.h  Filter.cpp  Filter.h  Generator.cpp  Generator.h  MainWindow.cpp  MainWindow.h  Makefile.am  Message.cpp  Message.h  Meter.cpp  Meter.h  MeterVariant.h  (+58 more)
src/resources/: .gitignore  Makefile.am  gmetronome.desktop.in  gmetronome.gresource.xml  org.gnome.dqpb.GMetronome.gresource.xml.in  org.gnome.gitlab.dqpb.GMetronome.gresource.xml.in
src/resources/css/: global.css
src/resources/ui/: MainWindow.glade  SettingsDialog.glade  ShortcutDialog.glade  SoundThemeEditor.glade
